FB button styled. Tooltip added to google map icon

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -489,6 +489,15 @@ img .google-link {
 }
 
 
+.fb.share {
+    margin-top: 220px;
+}
+
+.twitter-share{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 
 
 
