--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link rel="stylesheet" href="/static/css/style.css" media="screen">
         <link rel="stylesheet" href="/static/css/print.css" type="text/css" media="print" />
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='simple_favicon.ico')}}">
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
