Change a generate link button a bit

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,15 +12,13 @@
             <div class="row descr-portrait">
                 <div><img class="portrait col-md-2" src="/static/images/portret.jpg"></div>
                 <div class="about-sfo col-md-10"><p>
-                    &nbsp;&nbsp;&nbsp;&nbspSimpleSanFrancisco.com lets you create your personalized guide which you can easily use during your San Francisco trip. It looks great on all devices and it is also easy to print. I wrote it because I love travelling and my goal was to help another travellers to easly find best activities in city of Golden gate.<br>
-                    &nbsp;&nbsp;&nbsp;&nbspThis web app was my final project at <a class="hackbright" href="http://www.hackbrightacademy.com/" target="_blank">Hackbright Academy</a> - intensive programming course just for women. Currently I am looking for an internship in SF Bay Area. I would love to work on providing better user experience as frontend developer or usability researcher.<br><br>
-                    &nbsp;&nbsp;&nbsp;&nbspBelow you will find my contact information. Feel free to reach me.</p>
+                    &nbsp;&nbsp;&nbsp;&nbspSimpleSanFrancisco.com lets you create personalized guide which you can easily use during your San Francisco trip. It looks great on all devices and it is also easy to print. I wrote it because I love travelling and my goal was to help another travellers to easily find best activities in the city of Golden Gate Bridge.<br>
+                    &nbsp;&nbsp;&nbsp;&nbspThis web app was my final project at <a class="hackbright" href="http://www.hackbrightacademy.com/" target="_blank">Hackbright Academy</a> - very intensive (10 weeks) programming course. Currently I am looking for an internship in SF Bay Area. I would love to work on providing better user experience as a frontend developer or usability researcher.<br><br>
+                    &nbsp;&nbsp;&nbsp;&nbspBelow you will find my contact information.</p>
                 </div>
             </div>
         </div>
     </div>
-
-
     <div class="row">
         <div class="all-icons col-md-3 col-md-offset-5
         col-xs-8 col-xs-offset-2">
