--- a/templates/summary.html
+++ b/templates/summary.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-10 plan-name-summary"><h1>{{plan.name}}</h1></div>
     <div class="col-md-2">
-        <button type="submit" class="btn btn-default create-plan send-plan" onclick="window.prompt('Copy to clipboard: Ctrl+C, Enter', '{{public_url}}')">Copy link and send <br>guide to you friends!</button>
+        <button type="submit" class="btn btn-default create-plan send-plan" onclick="window.prompt('Copy to clipboard: Ctrl+C, Enter', '{{public_url}}')">Generate link and send <br>guide to you friends!</button>
     </div>
 </div>
 <div class="twitter-share"><a href="https://twitter.com/share" class="twitter-share-button" target="_blank" data-url="{{public_url}}" data-size="large">Tweet</a></div>
