--- a/templates/guide.html
+++ b/templates/guide.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+1{% extends 'base.html' %}
 {% block body %}
 <div class="plan-name-guide"><h1>{{plan.name}}</h1></div>
 {% for timeline, forecast in days %}
